hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world-service
            port: 
              number: 8080
